# downscaling-optimization

./: .gitignore  README.md
Database/: 10000000.txt  10000100.txt  10000200.txt  10000300.txt  10000400.txt  10000500.txt  10000600.txt  10000700.txt  10000800.txt  10000900.txt  1000100.txt  10001100.txt  10001200.txt  1000200.txt  1000300.txt  1000400.txt  1000500.txt  1000600.txt  1000700.txt  1000800.txt  1000900.txt  100100.txt  1001000.txt  10010000.txt  10010100.txt  10010200.txt  10010300.txt  10010400.txt  10010500.txt  10010600.txt  10010700.txt  10010800.txt  10010900.txt  10011000.txt  10011200.txt  1001200.txt  100200.txt  100300.txt  10030000.txt  10030100.txt  (+2651 more)
SavedModel/: fingerprint.pb  saved_model.pb
SavedModel/variables/: variables.data-00000-of-00001  variables.index
SavedModel125/: fingerprint.pb  saved_model.pb
SavedModel125/variables/: variables.data-00000-of-00001  variables.index
SavedModel150/: fingerprint.pb  saved_model.pb
SavedModel150/variables/: variables.data-00000-of-00001  variables.index
SavedModel90/: fingerprint.pb  saved_model.pb
SavedModel90/variables/: variables.data-00000-of-00001  variables.index
csv-conversions/: AttackElementCorrectParam.csv  CalcCorrectGraphEZ.csv  CalcCorrectGraphEZPreCalc.csv  EldenRingArmorNew.csv  Magic.csv  SwordArtsParam.csv  equipParamProtector.csv  equipParamWeapon.csv  reinforceParamWeapon.csv  spellAttackData.csv  weaponData.csv  weaponStaminaData.csv
csv-conversions/non csv data/: BloodsageNadine.json  Mind.txt  berserk.json  bestehp90.txt  datafit.txt  equipload.txt  model.keras  poise125model.keras  poise150model.keras  poise90model.keras  poisebreakpoints.txt  stamina.txt  testbuild.json  vigor.txt
csv-conversions/unnecessary files/: CorrectionId.csv  EldenRingArmor.csv
json-data/: CalcCorrectGraphEZ.csv  CalcCorrectGraphEZ.json  CorrectionId.json  EldenRingArmor.json  EldenRingArmorNew.json  armorData.js  calcCorrectGraph.js  reinforceParamWeapon.json  weaponData.json
main/: CMakeLists.txt  DataParser.cpp  DataParser.h  Weapon.cpp  Weapon.h  attackAndDefense.py  bnb.h  character.cpp  character.h  csv.hpp  db.h  loadCharacter.cpp  loadCharacter.h  loadcharacter.py  main.cpp  svd.h
main/Python/: attackStaminaGeneration.py  buildFileProcessor.py  datafit.py  loadcharacter.py  train.py
soulsplanner-build-archive/: build-schema.json
soulsplanner-build-archive/rl125ish/: 0008041e834341.json  002370ad2041ba.json  003ac504c24a6e.json  00587704c44a7d.json  009c733d6641d8.json  009d72dc9d4f04.json  00d3304ef34363.json  00d90bc7da47ce.json  00fa12cea3437e.json  0109d532fc4528.json  0174ea8fd04dfc.json  017e0a49ab4f2f.json  0184ea1e6e4b22.json  01869aaaae4600.json  02ab133ce245e2.json  02dac619f64b64.json  02eae33b8143df.json  035213da334e1d.json  03b6e1aaa9492a.json  040f815a624051.json  042596731848cd.json  04cc8d43694c94.json  04f23a072b4225.json  0553ebf42c4b4a.json  05e66ffeef4ac5.json  05fb2b9ed4425e.json  076d5376c44827.json  07af9645534aac.json  07bc611fe946d2.json  07e74dae5945c6.json  07f17f98aa499f.json  07f9707a2c4f79.json  084251c0ab4cd6.json  087c9e557243a0.json  088f8503a04831.json  09966a886843bd.json  09a35d337e43d0.json  09c0b4cc3d4b76.json  (+891 more)
(+1486 files in other folders)
